--- a/src/index.css
+++ b/src/index.css
@@ -287,3 +287,9 @@ html {
 .github_linkdin {
   @apply px-3 py-2 h-max flex justify-center items-center bg-[#2e2c2c] rounded-full;
 }
+.activemove {
+  @apply translate-x-[200px];
+}
+.contact > * {
+  @apply hover:scale-125 transition-all hover:drop-shadow-[0px_0px_1px_rgba(251,146,60,1)];
+}
