--- a/src/index.css
+++ b/src/index.css
@@ -138,8 +138,8 @@ html {
 .headerNav {
   @apply absolute top-[16%] z-50 -translate-y-1/2 flex-col right-[20px] gap-5  text-xs  flex items-center justify-center;
 }
-.headerNav button {
-  @apply block  border-2 transition-all  w-5 h-5   rounded-full;
+.headerNav p {
+  @apply block w-5 h-5 transition-all border-2 rounded-full;
 }
 .active {
   @apply border-[rgba(251,146,60,1)] scale-125;
@@ -163,7 +163,7 @@ html {
 /*about and hero*/
 /* about */
 .Skill {
-  @apply flex gap-5 justify-center capitalize flex-wrap;
+  @apply flex flex-wrap justify-center gap-5 capitalize;
 }
 .Skill div {
   @apply w-32  gap-4 flex flex-col items-center justify-center hover:drop-shadow-[0px_0px_2px_rgba(251,146,60,1)] transition-all duration-300 hover:text-orange-400;
@@ -174,10 +174,10 @@ html {
 /* about */
 /* hero */
 .code_graph {
-  @apply animate-pulse duration-500;
+  @apply duration-500 animate-pulse;
 }
 .parentHero {
-  @apply relative  w-full;
+  @apply relative w-full;
 }
 #home img {
   @apply absolute translate-y-[-50%] top-[50%] rotate-90 right-0;
@@ -221,7 +221,7 @@ html {
 }
 
 .inter input {
-  @apply bg-neutral-400 w-full rounded-md p-4 outline-none;
+  @apply w-full p-4 rounded-md outline-none bg-neutral-400;
 }
 
 .card:hover > div {
